--- a/src/components/contactUs/contactUs.scss
+++ b/src/components/contactUs/contactUs.scss
@@ -80,6 +80,8 @@
             justify-content: center;
             align-items: center;
             margin: 30px 0px;
+            background-color: transparent;
+            border: none;
         }
     }
 }
